crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_MUS6__03.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: MUS6/03
input: "%YAML \t 1.1\n---\n"
diagnostics:

cst:
YAML_STREAM@0..16
  YAML_DOCUMENT@0..16
    YAML_DIRECTIVE@0..11 "%YAML \t 1.1"
    NEWLINE@11..12 "\n"
    YAML_DOCUMENT_START@12..15 "---"
    NEWLINE@15..16 "\n"
