crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_MUS6__04.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: MUS6/04
input: "%YAML 1.1  # comment\n---\n"
diagnostics:

cst:
YAML_STREAM@0..25
  YAML_DOCUMENT@0..25
    YAML_DIRECTIVE@0..20 "%YAML 1.1  # comment"
    NEWLINE@20..21 "\n"
    YAML_DOCUMENT_START@21..24 "---"
    NEWLINE@24..25 "\n"
