crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_MUS6__05.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: MUS6/05
input: "%YAM 1.1\n---\n"
diagnostics:

cst:
YAML_STREAM@0..13
  YAML_DOCUMENT@0..13
    YAML_DIRECTIVE@0..8 "%YAM 1.1"
    NEWLINE@8..9 "\n"
    YAML_DOCUMENT_START@9..12 "---"
    NEWLINE@12..13 "\n"
